export interface EnergyReadingResponse {
    id: number;
    deviceName: string;
    watts: number;
    recordedAt: string;
}