package com.electrocorp.application.device.dto;

public class DeviceRequest {
    public String name;
    public String code;
    public String type;
    public String ownerId;
}