package com.electrocorp.application.device.dto;

public class DeviceScheduleRequest {
    public String executeAt; // "18:30"
    public boolean turnOn;
}