package com.electrocorp.application.energy.dto;

public class EnergyReadingRequest {
    public String deviceId;
    public double amount;
}