@startuml
title ElectroCorp - Diagrama de clases Backend

package "interfaces.rest" {
  class DeviceController {
    + pairDevice(request: DeviceRequest): DeviceResponse
    + getAllDevices(): List<DeviceResponse>
    + turnOn(deviceId: UUID)
    + turnOff(deviceId: UUID)
    + rename(deviceId: UUID, request: DeviceRequest): DeviceResponse
    + schedule(deviceId: UUID, request: DeviceScheduleRequest): DeviceResponse
    + delete(deviceId: UUID)
  }

  class EnergyController {
    + registerReading(request: EnergyReadingRequest): EnergyReadingResponse
    + getReadings(): List<EnergyReadingResponse>
    + getRecommendations(): List<String>
  }

  class AlertController {
    + getAlerts(): List<AlertResponse>
  }
}

package "application.device.service" {
  class PairDeviceUseCase {
    + execute(command: PairDeviceCommand): Device
  }

  class TurnOnDeviceUseCase {
    + execute(command: TurnOnDeviceCommand)
  }

  class TurnOffDeviceUseCase {
    + execute(command: TurnOffDeviceCommand)
  }

  class GetDevicesUseCase {
    + execute(): List<Device>
  }

  class RenameDeviceUseCase {
    + execute(command: RenameDeviceCommand): Device
  }

  class ScheduleDeviceUseCase {
    + execute(command: ScheduleDeviceCommand): Device
  }

  class DeleteDeviceUseCase {
    + execute(deviceId: UUID)
  }
}

package "application.energy.service" {
  class RegisterEnergyReadingUseCase {
    + execute(command: RegisterEnergyReadingCommand): EnergyReading
  }

  class GetEnergyReadingsUseCase {
    + execute(): List<EnergyReading>
  }

  class GetEnergyRecommendationsUseCase {
    + execute(): List<EnergyRecommendation>
  }
}

package "application.alert.service" {
  class CheckHighConsumptionAlertUseCase {
    + execute(reading: EnergyReading)
  }
}

package "domain.device.model" {
  class Device {
    - ownerId: UUID
    - name: DeviceName
    - code: DeviceCode
    - type: DeviceType
    - status: DeviceStatus
    - schedules: List<DeviceSchedule>
    - activities: List<DeviceActivity>
    + rename(newName: DeviceName)
    + turnOn(performedBy: UUID)
    + turnOff(performedBy: UUID)
    + addSchedule(schedule: DeviceSchedule)
    + getId(): UUID
    + getOwnerId(): UUID
    + getName(): DeviceName
    + getCode(): DeviceCode
    + getType(): DeviceType
    + getStatus(): DeviceStatus
    + getSchedules(): List<DeviceSchedule>
    + getActivities(): List<DeviceActivity>
  }

  class DeviceSchedule {
    - executeAt: LocalTime
    - turnOn: boolean
    + getExecuteAt(): LocalTime
    + isTurnOn(): boolean
  }

  class DeviceActivity {
    - performedBy: UUID
    - action: String
  }

  class DeviceName {
    - value: String
    + getValue(): String
  }

  class DeviceCode {
    - value: String
    + getValue(): String
  }

  enum DeviceType {
    SMART_PLUG
    SMART_SWITCH
    SENSOR
  }

  enum DeviceStatus {
    ON
    OFF
  }
}

package "domain.energy.model" {
  class EnergyReading {
    - id: UUID
    - deviceId: UUID
    - amount: EnergyAmount
    - recordedAt: LocalDateTime
    + getId(): UUID
    + getDeviceId(): UUID
    + getAmount(): EnergyAmount
    + getRecordedAt(): LocalDateTime
  }

  class EnergyRecommendation {
    - message: String
    + getMessage(): String
  }

  class EnergyAmount {
    - value: double
    + getValue(): double
  }
}

package "domain.alert.model" {
  class Alert {
    - id: UUID
    - message: String
  }
}

package "domain.device.repository" {
  interface DeviceRepository {
    + save(device: Device): Device
    + findById(id: UUID): Optional<Device>
    + findByOwnerId(ownerId: UUID): List<Device>
    + findAll(): List<Device>
    + deleteById(id: UUID)
  }
}

package "domain.energy.repository" {
  interface EnergyReadingRepository {
    + save(reading: EnergyReading): EnergyReading
    + findAll(): List<EnergyReading>
    + findByDeviceId(deviceId: UUID): List<EnergyReading>
  }
}

package "infrastructure.persistence.jpa" {
  class DeviceEntity {
    - id: UUID
    - code: String
    - name: String
    - type: String
    - status: String
    - ownerId: UUID
    - schedules: List<DeviceScheduleEntity>
  }

  class DeviceScheduleEntity {
    - id: UUID
    - executeAt: LocalTime
    - turnOn: boolean
  }

  class EnergyReadingEntity {
    - id: UUID
    - deviceId: UUID
    - amount: double
    - recordedAt: LocalDateTime
  }

  interface DeviceJpaRepository
  interface EnergyReadingJpaRepository

  class JpaDeviceRepositoryAdapter {
    - deviceJpaRepository: DeviceJpaRepository
    + save(device: Device): Device
    + findById(id: UUID): Optional<Device>
    + findByOwnerId(ownerId: UUID): List<Device>
    + findAll(): List<Device>
    + deleteById(id: UUID)
  }

  class JpaEnergyReadingRepositoryAdapter {
    - energyReadingJpaRepository: EnergyReadingJpaRepository
    + save(reading: EnergyReading): EnergyReading
    + findAll(): List<EnergyReading>
    + findByDeviceId(deviceId: UUID): List<EnergyReading>
  }

  class InMemoryAlertRepository
  class InMemoryUserRepository
}

package "application.dto" {
  class DeviceRequest {
    + ownerId: String
    + name: String
    + code: String
    + type: String
  }

  class DeviceResponse {
    + id: UUID
    + name: String
    + code: String
    + type: String
    + status: String
    + ownerId: UUID
    + schedules: List<DeviceScheduleResponse>
  }

  class DeviceScheduleRequest {
    + executeAt: String
    + turnOn: boolean
  }

  class DeviceScheduleResponse {
    + executeAt: String
    + turnOn: boolean
  }

  class EnergyReadingRequest {
    + deviceId: String
    + amount: double
  }

  class EnergyReadingResponse {
    + id: UUID
    + deviceId: UUID
    + amount: double
    + recordedAt: LocalDateTime
  }
}

DeviceController --> PairDeviceUseCase
DeviceController --> TurnOnDeviceUseCase
DeviceController --> TurnOffDeviceUseCase
DeviceController --> GetDevicesUseCase
DeviceController --> RenameDeviceUseCase
DeviceController --> ScheduleDeviceUseCase
DeviceController --> DeleteDeviceUseCase

EnergyController --> RegisterEnergyReadingUseCase
EnergyController --> GetEnergyReadingsUseCase
EnergyController --> GetEnergyRecommendationsUseCase
EnergyController --> CheckHighConsumptionAlertUseCase

PairDeviceUseCase --> DeviceRepository
TurnOnDeviceUseCase --> DeviceRepository
TurnOffDeviceUseCase --> DeviceRepository
GetDevicesUseCase --> DeviceRepository
RenameDeviceUseCase --> DeviceRepository
ScheduleDeviceUseCase --> DeviceRepository
DeleteDeviceUseCase --> DeviceRepository

RegisterEnergyReadingUseCase --> EnergyReadingRepository
GetEnergyReadingsUseCase --> EnergyReadingRepository
GetEnergyRecommendationsUseCase --> EnergyReadingRepository

JpaDeviceRepositoryAdapter ..|> DeviceRepository
JpaEnergyReadingRepositoryAdapter ..|> EnergyReadingRepository

JpaDeviceRepositoryAdapter --> DeviceJpaRepository
JpaEnergyReadingRepositoryAdapter --> EnergyReadingJpaRepository

DeviceJpaRepository --> DeviceEntity
EnergyReadingJpaRepository --> EnergyReadingEntity

Device "1" *-- "0..*" DeviceSchedule
Device "1" *-- "0..*" DeviceActivity
EnergyReading --> EnergyAmount
Device --> DeviceName
Device --> DeviceCode
Device --> DeviceType
Device --> DeviceStatus

DeviceEntity "1" *-- "0..*" DeviceScheduleEntity

DeviceController --> DeviceRequest
DeviceController --> DeviceResponse
DeviceController --> DeviceScheduleRequest
EnergyController --> EnergyReadingRequest
EnergyController --> EnergyReadingResponse

@enduml